packages/jsii/test/negatives/neg.property-name.1.ts
export class MyClass {
  public PROP?: number;
}
